# backend-guard

./: .backend-guard.toml  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: backend-guard.yml  ci.yml  release.yml
backend_guard/: __init__.py  __main__.py
backend_guard/audit/: __init__.py  doctor.py  service.py
backend_guard/cli/: app.py
backend_guard/core/: config.py  constants.py  exceptions.py  models.py  subprocess.py
backend_guard/detectors/: __init__.py  environment.py  package_manager.py  project.py
backend_guard/fixers/: __init__.py  service.py
backend_guard/installers/: __init__.py  env.py  project.py
backend_guard/templates/: project_files.py
backend_guard/utils/: console.py  filesystem.py  runtime.py
example-configs/: backend-guard.toml
examples/django-standard/: .env.example  .gitignore  README.md  manage.py  pyproject.toml
examples/django-standard/src/apps/core/: admin.py  models.py  serializers.py  urls.py  views.py
examples/django-standard/src/apps/core/migrations/: 0001_initial.py
examples/django-standard/src/config/: urls.py
examples/django-standard/src/config/settings/: base.py  dev.py  prod.py
examples/fastapi-standard/: .env.example  .gitignore  README.md  pyproject.toml  ruff.toml
examples/fastapi-standard/alembic/: env.py
examples/fastapi-standard/alembic/versions/: 20260516_0001_create_widgets_table.py
examples/fastapi-standard/src/app/: main.py
examples/fastapi-standard/src/app/api/routes/: health.py  widgets.py
examples/fastapi-standard/src/app/core/: config.py
examples/fastapi-standard/src/app/db/: models.py  session.py
examples/fastapi-standard/src/app/schemas/: widget.py
examples/fastapi-standard/src/app/services/: widgets.py
scripts/: install.ps1  install.sh
tests/: conftest.py
tests/cli/: test_cli_audit.py  test_cli_doctor.py  test_cli_init.py
tests/integration/: test_bootstrap_flow.py
tests/snapshots/: fastapi_audit.json
tests/unit/: test_audit_snapshot.py  test_environment.py  test_filesystem.py  test_package_manager.py  test_project_detector.py
