[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "backend-guard"
version = "0.1.0"
description = "Production-grade CLI for securing and standardizing Python backend projects."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Backend Guard Contributors" }
]
keywords = [
  "cli",
  "pre-commit",
  "security",
  "fastapi",
  "django",
  "python",
  "developer-tools",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
]
dependencies = [
  "pydantic>=2.9.0,<3.0.0",
  "rich>=13.9.0,<14.0.0",
  "typer>=0.12.5,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pytest-mock>=3.14.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/example/backend-guard"
Repository = "https://github.com/example/backend-guard"
Issues = "https://github.com/example/backend-guard/issues"

[project.scripts]
backend-guard = "backend_guard.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["backend_guard"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend_guard", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "C4",
  "ARG",
  "RUF",
]

[tool.ruff.format]
quote-style = "double"
