[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "fastapi-standard"
version = "0.1.0"
description = "Production-style FastAPI starter for backend-guard examples."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "sqlmodel>=0.0.22,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[dependency-groups]
dev = [
  "ruff>=0.11.0,<1.0.0",
]

[tool.uv]
package = false
